...
import Combine

class GameScene: SKScene, SKPhysicsContactDelegate {
    
    enum BitMask: UInt32 {
        case edges = 1 // 0b01
        case block = 2 // 0b10
        case ceiling = 4 // 0b100
    }
    
    let model: Model
    
    var cancellables = Set<AnyCancellable>()
...
